--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "Shubh Ashish",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "md5": "^2.3.0",
     "mongoose": "^6.0.6",
     "morgan": "^1.10.0",
+    "nanoid": "^3.1.29",
     "nodemon": "^2.0.12"
   }
 }
