--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
+    "datauri": "^4.1.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "md5": "^2.3.0",
     "mongoose": "^6.0.6",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "nanoid": "^3.1.29",
     "nodemon": "^2.0.12"
   }
